<resources>
    <string name="app_name">"Sklep Apple Kacpra"</string>
    <string name="dialog_name">O programie</string>
    <string name="dialog_message">Stworzone przez Kacpra Cichorskiego 4pp</string>
    <string name="subject">Zamówienie</string>
    <string name="shortcut_short_label">SMS</string>
    <string name="shortcut_long_label">Wyślij SMS</string>
    <string name="shortcut_disabled_message">Wyłaczone</string>
    <string name="shortcut_short_label1">E-mail</string>
    <string name="shortcut_long_label1">Wyślij E-mail</string>
    <string name="shortcut_disabled_message1">Wyłaczone</string>
    <string name="sendsms">Wyślij SMS</string>
    <string name="sendemail">Wyślij e-mail</string>
    <string name="smsBody">Treść wiadomości</string>
    <string name="phoneNumber">Numer telefonu</string>
    <string name="emailBuy">Wprowadź swój e-mail</string>
    <string name="numberBuy">Wprowadź swój numer telefonu</string>
    <string name="image">Zdjęcie telefonu</string>
    <string name="lista_zam_wie">Lista zamówień</string>
    <string name="udost_pnij">Udostępnij</string>
    <string name="o_programie">O programie</string>
    <string name="check_price">Cena</string>
    <string name="order">ZAMÓW</string>
    <string name="your_order">Twoje zamówienie</string>
    <string name="want_airpods_too">Chcesz rownież airpodsy?</string>
    <string name="price">cena</string>
    <string name="want_watch_too">Chcesz również zegarek</string>

</resources>