<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="sms"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_sms_24"
        android:shortcutShortLabel="@string/shortcut_short_label"
        android:shortcutLongLabel="@string/shortcut_long_label"
        android:shortcutDisabledMessage="@string/shortcut_disabled_message">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.projektzaliczeniowyv1"
            android:targetClass="com.example.projektzaliczeniowyv1.messageSystem.SendMessage" />

        <categories android:name="android.shortcut.conversation" />
        <capability-binding android:key="actions.intent.CREATE_MESSAGE" />
    </shortcut>

    <shortcut
        android:shortcutId="mail"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_email_24"
        android:shortcutShortLabel="@string/shortcut_short_label1"
        android:shortcutLongLabel="@string/shortcut_long_label1"
        android:shortcutDisabledMessage="@string/shortcut_disabled_message1">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.projektzaliczeniowyv1"
            android:targetClass="com.example.projektzaliczeniowyv1.messageSystem.SendEmail"/>

        <categories android:name="android.shortcut.conversation"/>
        <capabilty-binding android:key="actions.intent.CREATE_MESSAGE"/>

    </shortcut>
</shortcuts>