<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".messageSystem.SendMessage">

    <TextView
        android:id="@+id/textSMS"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/sendsms"
        android:textSize="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/textSMS"
        android:hint="@string/phoneNumber"
        android:id="@+id/phoneNumber"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_below="@id/phoneNumber"
        android:hint="@string/smsBody"
        android:id="@+id/destinationAddress"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/destinationAddress"
        android:layout_marginTop="30dp"
        android:text="@string/sendsms"
        android:id="@+id/buttonSMS"

        />

</RelativeLayout>